2008-04-04  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c (ReflectOutput): Allow zero return from
	  write when input was zero-length anyway. Otherwise keept it an
	  error, and separate the message from 'written too much'.

	* tests/ioCmd.test (iocmd-24.6): Testcase updated for changed
	  message.

	* generic/tclIORChan.c (ReflectClose): Added missing removal of
	  the now closed channel from the reflection map. Before we could
	  crash the system by invoking 'chan postevent' on a closed
	  reflected channel, dereferencing the dangling pointer in the
	  map.

	* tests/ioCmd.test (iocmd-31.8): Testcase for the above.

2008-04-03  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): Applied patch [Bug 1932639] to
	* tests/io.test: prevent fcopy from calling -command synchronously
	* tests/chanio.test: the first time. Thanks to Alexandre Ferrieux
	  <ferrieux@users.sourceforge.net> for report and patch.

2008-04-02  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): Applied patch for the fcopy problem
	  [Bug 780533], with many thanks to Alexandre Ferrieux
	  <ferrieux@users.sourceforge.net> for tracking it down and
	  providing a solution. Still have to convert his test script into
	  a proper test case.

2008-04-01  Andreas Kupries  <andreask@activestate.com>

	* generic/tclStrToD.c: Applied patch for [Bug 1839067] (fp
	* unix/tcl.m4: rounding setup on solaris x86, native cc), provided
	* unix/configure: by Michael Schlenker. configure regen'd.

2008-04-01  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclStubLib.c (Tcl_InitStubs):	Added missing error message.
	* generic/tclPkg.c (Tcl_PkgInitStubsCheck):

2008-03-30  Kevin Kenny  <kennykb@acm.org>

	* generic/tclInt.h (TclIsNaN):
	* unix/configure.in: Added code to the configurator to check for
	                     a standard isnan() macro and use it if one
	                     is found.  This change avoids bugs where