@@ -6915,11 +6915,12 @@ test chan-io-53.8 {CopyData: async callback and error handling, Bug 1932639} -se
     lappend ::RES [expr {($sbs > 0) ? "sync/FAIL" : "sync/OK"}] $sbs
     # Now let the async part happen. Should capture the error in cmd
     # via bgerror. If not break the event loop via timer.
-    after 1000 {
+    set token [after 1000 {
 	lappend ::RES {bgerror/FAIL timeout}
 	set ::forever has-been-reached
-    }
+    }]
     vwait ::forever
+    catch {after cancel $token}
     # Report
     set ::RES
 } -cleanup {
@@ -6932,6 +6933,53 @@ test chan-io-53.8 {CopyData: async callback and error handling, Bug 1932639} -se
     removeFile foo
     removeFile bar
 } -result {0 sync/OK 0 {CMD 2} {bgerror/OK !STOP}}
+test chan-io-53.9 {CopyData: -size and event interaction, Bug 780533} -setup {
+    set out [makeFile {} out]
+    set err [makeFile {} err]
+    set pipe [open "|[info nameofexecutable] 2> $err" r+]
+    chan configure $pipe -translation binary -buffering line
+    chan puts $pipe {
+	chan configure stdout -translation binary -buffering line
+	chan puts stderr Waiting...
+	after 1000
+	foreach x {a b c} {
+	    chan puts stderr Looping...
+	    chan puts $x
+	    after 500
+	}
+	proc bye args {
+	    if {[chan gets stdin line]<0} {
+		chan puts stderr "CHILD: EOF detected, exiting"
+		exit
+	    } else {
+		chan puts stderr "CHILD: ignoring line: $line"
+	    }
+	}
+	chan puts stderr Now-sleeping-forever
+	chan event stdin readable bye
+	vwait forever
+    }
+    proc ::done args {
+	set ::forever OK
+	return
+    }
+    set ::forever {}
+    set out [open $out w]
+} -constraints {stdio openpipe fcopy} -body {
+    chan copy $pipe $out -size 6 -command ::done
+    set token [after 5000 {
+	set ::forever {fcopy hangs}
+    }]
+    vwait ::forever
+    catch {after cancel $token}
+    set ::forever
+} -cleanup {
+    chan close $pipe
+    rename ::done {}
+    removeFile out
+    removeFile err
+    catch {unset ::forever}
+} -result OK
 
 test chan-io-54.1 {Recursive channel events} {socket fileevent} {
     # This test checks to see if file events are delivered during recursive
